@@ -1397,6 +1397,7 @@ void NPC::DoClassAttacks(Mob *target) {
 	//general stuff, for all classes....
 	//only gets used when their primary ability get used too
 	if (taunting && HasOwner() && target->IsNPC() && target->GetBodyType() != BT_Undead && taunt_time) {
+        this->GetOwner()->Message_StringID(MT_PetResponse, PET_TAUNTING);
 		Taunt(target->CastToNPC(), false);
 	}
 	
